--- a/wiki/Desenvolvedores.wiki
+++ b/wiki/Desenvolvedores.wiki
@@ -4,10 +4,10 @@
 <hr>
 
 Carlos César Bezerra Fonseca (Developer, DBA, CCB, Maintenance) cc_bf@hotmail.com ;<br>
-Cybele Félix Amorim Veríssimo (Tester, Design, DBA, CCB, Quality control, Auditors) cybeleamorissimo@yahoo.com.br;<br>
+Cybele Félix Amorim Veríssimo (Tester, Design, DBA, CCB, Quality control, Auditors) cybeleamorissimo@gmail.com;<br>
 Geraldo Gomes da Cruz Júnior (Developer, DBA, Documentation, Desing, CCB, Requirements, Graph) <a href="geraldoj8@gmail.com"> geraldoj8@gmail.com</a> ;<br> 
 Larissa Karollyne de Melo Ferreira (Tester, Documentation, DBA, CCB, Requirements, Graph, Auditors) larissakarollyne@gmail.com ;<br>
-Mário Gomes de Melo (Developer, DBA, CCB, Maintenance) infoninja@hotmail.com;<br>
+Mário Gomes de Melo (Developer, DBA, CCB, Maintenance) mauriokk@gmail.com;<br>
 Wendislau Victor Santos da Silva (Tester, CCB, Quality control, Auditors) wendislau_victor@hotmail.com;<br>
 <br>
 <hr>
