--- a/wiki/Docs.wiki
+++ b/wiki/Docs.wiki
@@ -14,7 +14,7 @@
 <a href="https://docs.google.com/spreadsheet/ccc?key=0AphIXVRKD54qdGM4OGZ6cUlYMFlXLXRrZ25PYnlwZ1E&usp=sharing">Scrum</a>
 <br>
 <hr>
-<H1 TEXT-ALIGN='CENTER'><b><FONT FACE="TIMES" SIZE="1"><p align="center">Base Line _ Auditorias</p></font></b></H1>
+<H3 TEXT-ALIGN='CENTER'><b><FONT FACE="TIMES" SIZE="1"><p align="center">Base Line - Auditorias</p></font></b></H3>
 <hr>
 <a href="https://docs.google.com/document/d/18XUBcvYdOEjltPEGUUmNM76Ezr7-_TCSawO1rCePabQ/edit?usp=sharing">Baseline</a>
 <br>
